fix: photo at top on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -767,7 +767,7 @@ footer {
   }
 
   .hero-top {
-    flex-direction: column-reverse;
+    flex-direction: column;
     align-items: center;
     gap: 1.5rem;
   }
